Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8464

crash when applying regular expression substitution

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.7.0
    • Qt Creator 2.7.0
    • Editors
    • None
    • linux x86-64, ubuntu 12.10
    • a7323614a09f341b5ef4fe9f359204658b930cc2

      Make a test.cc

      A
      B
      C
      

      Select everything. Activate the inline find-replace, enable regular expression matching. Search text: (.*), replace text: \1. Hit 'Replace All'. Nothing happens and the button never exits the pressed state.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            ckamm Christian Kamm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes