Editor: Fixed endless loop in BaseTextFind

...when trying to replace some regular expressions that could result in
empty search results like ^, $ or \b.

Task-number: QTCREATORBUG-8464
Change-Id: I91a304d3609c3ec20437c698d53e6a1819dfb924
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@digia.com>